--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "homepage": "https://github.com/taraksh01/petPooja#readme",
   "devDependencies": {
     "parcel": "^2.9.3"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
