Added older browser support

--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
-  }
+  },
+  "browserslist": [
+    "last 3 version"
+  ]
 }
