Changed source for api

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,7 @@
 {
   "headers": [
     {
-      "source": [
-        "https://www.swiggy.com/dapi/(.*)",
-        "https://www.swiggy.com/mapi/(.*)"
-      ],
+      "source": "/api/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Origin", "value": "*" },
