Revert "Changed source for api"
This reverts commit 71912ec4ee98c2366a1ae5128dcaf655b25556b9.

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,10 @@
 {
   "headers": [
     {
-      "source": "/api/(.*)",
+      "source": [
+        "https://www.swiggy.com/dapi/(.*)",
+        "https://www.swiggy.com/mapi/(.*)"
+      ],
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Origin", "value": "*" },
